fixed alignment of images

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,12 @@ style{
     flex: 33.33%;
     padding: 5px;
 }
+pics{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 75px;
+    margin: 125px;
+}
 h1{
     text-align: center;
 }
